# chron

./: .gitignore  README.md
app/: CMakeLists.txt  Kconfig  prj.conf
app/boards/: chron_nrf54l15_cpuapp_ns.overlay
app/src/: gpio.c  gpio.h  hr_sensor.c  hr_sensor.h  imu.c  imu.h  main.c  page.c  page.h  temp_sensor.c  temp_sensor.h
app/src/pages/: activity.c  activity.h  climate.c  climate.h  home.c  home.h  settings.c  settings.h  summary.c  summary.h  timer.c  timer.h
